# game_of_life

./: .gitignore  meson.build
headers/: display.hpp  game.hpp
src/: display.cpp  game.cpp  main.cpp
